# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.lcov  pyproject.toml
.github/workflows/: python-ci.yml
gendiff/: __init__.py  comparator.py  data_loader.py  flat_diff_builder.py  gendiff.py  nested_diff_builder.py  parsers.py
gendiff/formater/: common.py  formatter_selector.py  plain.py  stylish.py
gendiff/formatters/: __init__.py  common.py  nested_stylish.py  stylish.py
gendiff/scripts/: arg_parser.py  d.py  gendiff.py  generate_diff.py
tests/: fixtures.py  test_gendiff.py  test_generate_diff.py
tests/fixtures/: expected_output_nested_json.txt  expected_output_nested_yaml.txt  nested_file1.json  nested_file1.yml  nested_file2.json  nested_file2.yml  result_file3_file4_json
