[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A utility for comparing configuration files"
authors = ["artxnv <artxnv@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gendiff" }
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

